changed CSS and class for bottom box as not sitting correctly on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,4 +235,8 @@ a:hover {
     padding: 0px;
 }
 
+.bottom-box {
+    padding-left: 15px;
+    padding-right: 15px;
+}
 }
